<resources>
    <string name="app_name">ND940C3-Project</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">Check the status</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="download_channel_name">Download Notifications</string>

    <string name="radio_1_text">Glide - Image Loading Library by BumpTech</string>
    <string name="radio_2_text">LoadApp - Current repository by Udacity</string>
    <string name="radio_3_text">Retrofit - Type-safe HTTP client for Android and Java by Square, Inc</string>

    <string name="mail_fab">MAIL_FAB</string>
    <string name="back_to_main_screen">BACK_TO_MAIN_SCREEN</string>
    <string name="file_name">File Name : </string>
    <string name="status">Status :</string>
    <string name="show_details">Show Details</string>
    <string name="download_btn_desc">Start Download</string>
    <string name="ok">OK</string>

</resources>
