<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main">

    <ImageView
        android:id="@+id/title_image"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_assistant_black_24dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/app_name"/>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/startMargin"
        android:layout_marginEnd="@dimen/endMargin"
        app:layout_constraintBottom_toTopOf="@+id/custom_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_image">

        <RadioButton
            android:id="@+id/radio_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="@dimen/bottomMargin"
            android:text="@string/radio_1_text"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/bottomMargin"
            android:minHeight="48dp"
            android:text="@string/radio_2_text"
            android:textSize="@dimen/default_text_size" />

        <RadioButton
            android:id="@+id/radio_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:layout_marginBottom="@dimen/bottomMargin"
            android:text="@string/radio_3_text"
            android:textSize="@dimen/default_text_size" />

    </RadioGroup>

    <!--    Custom Button With Custom Attributes    -->
    <com.udacity.LoadingButton
        android:id="@+id/custom_button"

        app:text="@string/button_name"
        app:loadingText="@string/button_loading"
        app:backColor="@color/colorPrimary"
        app:loadingColor="@color/colorPrimaryDark"
        app:contentDesc="@string/app_description"

        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_margin="@dimen/startMargin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>